--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      Shared by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">BootstrapThemes</a>
+      Feito por <i class="fa fa-love"></i><a href="#">PwP</a>
 
     </div>
   </div>
